--- a/dom/nodes/Document-contentType/contentType/contenttype_javascripturi.html
+++ b/dom/nodes/Document-contentType/contentType/contenttype_javascripturi.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <title>Javascript URI document.contentType === 'text/html'</title>
-<p>FAIL: script did not run.</p>
-<script type="text/javascript" src="../runner.js"></script>
+<script src="/resources/testharness.js"></script>
+<script src="/resources/testharnessreport.js"></script>
+<div id=log></div>
+<iframe style="display:none"></iframe>
 <script>
-function setResult(passed) {
-  if(passed === true) {
-    document.getElementsByTagName("p")[0].innerHTML = "PASS";
-  } else {
-    document.getElementsByTagName("p")[0].innerHTML = "FAIL";
-  }
-  runnerResult(passed);
-}
-
-window.location.href = "javascript:setResult(document.contentType == \"text/html\" ? true : false);";
+async_test(function() {
+  var iframe = document.getElementsByTagName('iframe')[0];
+  iframe.addEventListener('load', this.step_func_done(function() {
+    assert_equals(iframe.contentDocument.contentType, "text/html");
+    assert_equals(iframe.contentDocument.documentElement.textContent, "text/html");
+  }), false);
+  iframe.src = "javascript:document.contentType";
+});
 </script>
