--- a/dom/nodes/Document-contentType/contentType/xhr_responseType_document.html
+++ b/dom/nodes/Document-contentType/contentType/xhr_responseType_document.html
@@ -1,31 +1,18 @@
 <!DOCTYPE html>
 <title>XHR - retrieve HTML document: document.contentType === 'application/xml'</title>
-<p>FAIL: script did not run.</p>
-<script type="text/javascript" src="../runner.js"></script>
+<script src="/resources/testharness.js"></script>
+<script src="/resources/testharnessreport.js"></script>
+<div id=log></div>
 <script>
-var xhr = new XMLHttpRequest();
-xhr.open("GET", "../resources/blob.xml");
-xhr.responseType = "document";
-xhr.onreadystatechange = function(response) {
-  if (xhr.readyState === 4) {  
-    if (xhr.status === 200) { 
-      var doc = xhr.responseXML;
-      if(doc.contentType === "application/xml") {
-        setResult(true);
-      } else {
-        setResult(false);
-      } 
-    }  
-  }
-};
-xhr.send(null);
-
-function setResult(passed) {
-  if(passed === true) {
-    document.getElementsByTagName("p")[0].innerHTML = "PASS";
-  } else {
-    document.getElementsByTagName("p")[0].innerHTML = "FAIL";
-  }
-  runnerResult(passed);
-}
+async_test(function() {
+  var xhr = new XMLHttpRequest();
+  xhr.open("GET", "../resources/blob.xml");
+  xhr.responseType = "document";
+  xhr.onload = this.step_func_done(function(response) {
+    assert_equals(xhr.readyState, 4);
+    assert_equals(xhr.status, 200);
+    assert_equals(xhr.responseXML.contentType, "application/xml");
+  });
+  xhr.send(null);
+});
 </script>
