--- a/dom/nodes/Document-contentType/contentType/contenttype_mimeheader_03.html
+++ b/dom/nodes/Document-contentType/contentType/contenttype_mimeheader_03.html
@@ -10,6 +10,6 @@ async_test(function() {
   iframe.addEventListener('load', this.step_func_done(function() {
     assert_equals(iframe.contentDocument.contentType, "text/html");
   }), false);
-  iframe.src = "../resources/contenttype_setter.php?removeContentType=true";
+  iframe.src = "../resources/contenttype_setter.py?removeContentType=true";
 });
 </script>
