--- a/html/semantics/text-level-semantics/the-bdo-element/bdo-child.html
+++ b/html/semantics/text-level-semantics/the-bdo-element/bdo-child.html
@@ -5,14 +5,13 @@
     <title>HTML Test: bdo_child_override</title>
     <link rel="author" title="Intel" href="http://www.intel.com/">
     <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/text-level-semantics.html#the-bdo-element">
-    <link rel="match" href="bdo_element_ref.html">
+    <link rel="match" href="bidi-001-ref.html">
     <meta name="assert" content="Check if the bdo element represents explicit text directionality formatting control for its children.">
   </head>
   <body>
-    <p>Test passes if there is a text 'ABCDEF'.</p>
+    <p>Test passes if there is text 'WERBEH'.</p>
     <bdo dir="rtl">
-      <span>FEDCBA</span>
+      <span>HEBREW</span>
     </bdo>
   </body>
 </html>
-
