--- a/html/semantics/text-level-semantics/the-bdo-element/bdo-override.html
+++ b/html/semantics/text-level-semantics/the-bdo-element/bdo-override.html
@@ -4,16 +4,15 @@
     <meta charset="utf-8">
     <title>HTML Test: bdo_override</title>
     <link rel="author" title="Intel" href="http://www.intel.com/">
-    <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/text-level-semantics.html#the-bdo-element">
-    <link rel="match" href="bdo_element_ref.html">
+    <link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/text-level-semantics.html#the-bdo-element">
+    <link rel="match" href="bidi-001-ref.html">
     <meta name="assert" content="Check if authors could override the Unicode bidirectional algorithm
         by explicitly specifying a direction override of bdo element">
   </head>
   <body>
-    <p>Test passes if there is a text 'ABCDEF'.</p>
+    <p>Test passes if there is text 'WERBEH'.</p>
     <p>
-      &#x202E;<bdo dir="ltr">ABCDEF</bdo>&#x202C;
+      &#x202E;<bdo dir="ltr">WERBEH</bdo>&#x202C;
     </p>
   </body>
 </html>
-
