Update html titles

--- a/html/semantics/text-level-semantics/the-bdo-element/bdo-child.html
+++ b/html/semantics/text-level-semantics/the-bdo-element/bdo-child.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML Test: bdo_child_override</title>
+    <title>HTML Test: bdo - text directionality formatting control for its children</title>
     <link rel="author" title="Intel" href="http://www.intel.com/">
     <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/text-level-semantics.html#the-bdo-element">
     <link rel="match" href="bidi-001-ref.html">
