--- a/html/semantics/text-level-semantics/the-bdo-element/bdo-override.html
+++ b/html/semantics/text-level-semantics/the-bdo-element/bdo-override.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML Test: bdo_override</title>
+    <title>HTML Test: bdo - override the Unicode bidirectional algorithm</title>
     <link rel="author" title="Intel" href="http://www.intel.com/">
     <link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/text-level-semantics.html#the-bdo-element">
     <link rel="match" href="bidi-001-ref.html">
