--- a/html/semantics/embedded-content-0/the-embed-element/embed-dimension.html
+++ b/html/semantics/embedded-content-0/the-embed-element/embed-dimension.html
@@ -9,14 +9,12 @@
 <embed src="/images/blue.png" height="100" width="100" id="test">
 <script>
   test(function () {
-    var embed = document.getElementById("test"),
-        h = getComputedStyle(embed, false)["height"];       
-    assert_equals(h, "100px", "The height of the embed element should be 100px.");
+    var height = getComputedStyle(document.getElementById("test"), false)["height"];
+    assert_equals(height, "100px", "The height of the embed element should be 100px.");
   }, "Check the actual length of the embed element's height");
 
   test(function () {
-    var embed = document.getElementById("test"),
-        w = getComputedStyle(embed, false)["width"];
-    assert_equals(w, "100px", "The width of the embed element should be 100px.");
+    var width = getComputedStyle(document.getElementById("test"), false)["width"];
+    assert_equals(width, "100px", "The width of the embed element should be 100px.");
   }, "Check the actual length of the embed element's width");
 </script>
