Review and adjust tests from section 4.1.5

--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-both-parent-and-blended-with-3D-transform.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-both-parent-and-blended-with-3D-transform.html
@@ -8,13 +8,14 @@
 		<meta name="assert" content="Test checks that the element with mix-blend-mode blends with the parent element (both with 3D transform)">
 		<link rel="match" href="reference/mix-blend-mode-both-parent-and-blended-with-3D-transform-ref.html">
 		<style>
-			.simple {
+			.normal {
 				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
 				display:inline-block;
 				-webkit-transform:rotateX(20deg);
-				moz-transform:rotateX(20deg);
+				-moz-transform:rotateX(20deg);
+				transform:rotateX(20deg);
 			}
 			.mixed {
 				background: fuchsia;/*rgb(255,0,255);*/
@@ -22,16 +23,17 @@
 				margin-left: 20px;
 				width: 200px;
 				height: 200px;
+				transform:rotateX(20deg);
 				-webkit-transform:rotateX(20deg);
-				moz-transform:rotateX(20deg);
+				-moz-transform:rotateX(20deg);
 				mix-blend-mode: difference;
 			}
 		</style>
 	</head>
 	<body>
-		<p>You should see a fuchsia square on top of an aqua square <br>
-			An yellow square should appear at the intersection of the two squares. </p>
-		<div class="simple">
+		<p>You should see a fuchsia square overlapping an aqua square. <br>
+			The overlapping area should be yellow. </p>
+		<div class="normal">
 			<div class="mixed">
 			</div>
 		</div>
