--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-with-3D-transform.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-with-3D-transform.html
@@ -5,15 +5,16 @@
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
-		<meta name="assert" content="Test checks that the element with mix-blend-mode and 3D transform blends with the parent element">
+		<meta name="assert" content="Test checks that the element with mix-blend-mode and 3D transform blends correctly">
 		<link rel="match" href="reference/mix-blend-mode-blended-with-3D-transform-ref.html">
 		<style>
-			.simple {
+			.normal {
 				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
-				display:inline-block;
-				position:fixed;
+				display: inline-block;
+				position:relative;
+				z-index: 1;
 			}
 			.mixed {
 				background: fuchsia;/*rgb(255,0,255);*/
@@ -22,15 +23,16 @@
 				width: 200px;
 				height: 200px;
 				-webkit-transform:rotateX(20deg);
-				moz-transform:rotateX(20deg);
+				-moz-transform:rotateX(20deg);
+				transform:rotateX(20deg);
 				mix-blend-mode: difference;
 			}
 		</style>
 	</head>
 	<body>
-		<p>You should see a fuchsia square on top of an aqua square <br>
-			An yellow square should appear at the intersection of the two squares. </p>
-		<div class="simple">
+		<p>You should see a fuchsia square overlapping an aqua square. <br>
+			The overlapping area should be yellow. </p>
+		<div class="normal">
 			<div class="mixed">
 			</div>
 		</div>
