--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform-and-transition.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform-and-transition.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Test: mix-blend-mode between a parent element with 3D transform and transition and its child</title>
+		<title>CSS Test: blending between an element having 3D transitions and its child</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
-		<meta name="assert" content="Test checks that the element with mix-blend-mode blends with the parent element with 3D transform and transition">
-		<link rel="match" href="">
+		<meta name="assert" content="Test checks that an element having mix-blend-mode blends with its parent element having 3D transform and transition">
 		<style>
-			.simple {
+			.normal {
 				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
 				display:inline-block;
-				position:fixed;
+				position:relative;
+				z-index: 1;
 				-webkit-transition: -webkit-transform 2s;
-				moz-transform: -moz-transform 2s;
+				-moz-transform: -moz-transform 2s;
+				transform: transform 2s;
 
 			}
-			.simple:hover {
+			.normal:hover {
 				-webkit-transform: rotateX(40deg);
 				-moz-transform: rotateX(40deg);
 			}
@@ -33,11 +34,11 @@
 		</style>
 	</head>
 	<body>
-		<p>You should see a fuchsia square on top of an aqua square <br>
-			An yellow square should appear at the intersection of the two squares. <br>
-			Hover over the squares. RotateY(40deg) should happen without color changes in the squares.
+		<p>You should see 2 partially overlapping squares having fuchsia and aqua colors.<br>
+			The intersection of these 2 squares should be yellow. <br>
+			When you hover over the squares, they will rotate, without colors being changed.
 		</p>
-		<div class="simple">
+		<div class="normal">
 			<div class="mixed"></div>
 		</div>
 	</body>
