--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-sibling-with-3D-transform.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-sibling-with-3D-transform.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Test: mix-blend-mode between a parent element with 3D transform and its child</title>
+		<title>CSS Test: blending between an element and its sibling element having 3D transform</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
-		<meta name="assert" content="Test checks that the element with mix-blend-mode blends with the parent element with 3D transform">
+		<meta name="assert" content="Test checks that an element with mix-blend-mode blends with both parent element and with sibling element having 3D transform">
 		<link rel="match" href="reference/mix-blend-mode-sibling-with-3D-transform-ref.html">
 		<style>
-			.simple {
+			.normal {
 				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
 				display:inline-block;
-				position: fixed;
+				position: relative;
+				z-index: 1;
 			}
 			.mixed {
 				background: fuchsia;/*rgb(255,0,255);*/
@@ -22,7 +23,7 @@
 				width: 200px;
 				height: 200px;
 				mix-blend-mode: difference;
-				}
+			}
 			.siblingOfMixed {
 				background: red;/*rgb(255,0,0);*/
 				margin-top: 20px;
@@ -31,13 +32,14 @@
 				height: 200px;
 			    -webkit-transform: perspective(600px) translateZ(-200px);
 			    -moz-transform: perspective(600px) translateZ(-200px);
+			    transform: perspective(600px) translateZ(-200px);
 			}
 		</style>
 	</head>
 	<body>
-		<p>You should see three squares: a blue square on top of a fuchsia square, on top of an aqua square. <br>
-		An yellow square should appear at the intersection of the aqua with the fuchsia square. </p>
-		<div class="simple">
+		<p>You should see three overlapping squares, from back to front, having the following colors: aqua, fuchsia and blue. <br>
+		The intersection area between aqua and fuchsia squares, which is not overlapped by the blue square, should be yellow.</p>
+		<div class="normal">
 			<div class="siblingOfMixed"></div>
 			<div class="mixed"></div>
 		</div>
