--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-overflow-hidden-and-border-radius.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-overflow-hidden-and-border-radius.html
@@ -1,44 +1,37 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Test: mix-blend-mode between a parent element and a blended child with overflow:hidden and border-radius</title>
+		<title>CSS Test: blending between an element and its child having overflow:hidden and border-radius</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
-		<meta name="assert" content="Test checks that the element with mix-blend-mode, overflow:hidden and border-radius correctly blends with the parent element.">
+		<meta name="assert" content="Test checks that an element having mix-blend-mode, overflow:hidden and border-radius blends correctly with its parent element.">
 		<link rel="match" href="reference/mix-blend-mode-blended-element-overflow-hidden-and-border-radius-ref.html">
 		<style>
-			.simple{
+			.normal {
 				background: aqua;/*rgb(0,255,255);*/
-				width: 140px;
-				height: 140px;
-				display: inline-block;
-				position: fixed;
-
+				width: 150px;
+				height: 150px;
+				position: relative;
+				z-index: 1;
 			}
 			.mixed {
-				background: red;/*rgb(255,0,0);*/
-				margin-top: 20px;
-				margin-left: 20px;
-				width: 200px;
-				height: 200px;
+				width: 150px;
+				height: 150px;
 				overflow: hidden;
-				border-radius: 1em 5em;
+				border-radius: 2em 2em;
 				mix-blend-mode: multiply;
-				-webkit-transform: translateZ(0);
 			}
 			.childOfMixed {
 				background: yellow;/*rgb(255,255,0);*/
-				margin-top: 20px;
-				margin-left: 20px;
-				width: 200px;
-				height: 200px;
+				width: 150px;
+				height: 150px;
 			}
 		</style>
 	</head>
 	<body>
-		<p> </p>
-		<div class="simple">
+		<p>The test passes if you see a lime rectangle with aqua rounded corners.</p>
+		<div class="normal">
 			<div class="mixed">
 				<div class="childOfMixed"></div>
 			</div>
