--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-overflow-scroll.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-overflow-scroll.html
@@ -1,42 +1,39 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Test: mix-blend-mode between a parent element and its child with overflow:scroll</title>
+		<title>CSS Test: blending between an element and its child having overflow:scroll</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
-		<meta name="assert" content="Test checks that the element with mix-blend-mode and overflow:scroll blends with the parent element">
+		<meta name="assert" content="Test checks that an element with mix-blend-mode and overflow:scroll blends with its parent element">
+		<link rel="match" href="reference/mix-blend-mode-blended-element-overflow-scroll-ref.html">
 		<style>
-			.simple{
+			.normal {
 				background: aqua;/*rgb(0,255,255);*/
-				width: 140px;
-				height: 140px;
-				display:inline-block;
-				position: fixed;
-			}
-			.mixed{
-				background: red;/*rgb(255,0,0);*/
-				margin-top: 20px;
-				margin-left: 20px;
 				width: 100px;
 				height: 100px;
+				position: relative;
+				z-index: 1;
+				overflow: hidden;
+			}
+			.mixed {
+				background: red;/*rgb(255,0,0);*/
+				width: 150px;
+				height: 150px;
 				overflow:scroll;
 				mix-blend-mode: multiply;
-				}
-			.embedded_child {
+			}
+			.scrollingContent {
 				width: 200px;
 				height: 200px;
 			}
 		</style>
 	</head>
 	<body>
-		<p>Test passes if you see a black rectangle with large aqua borders and scrollbars on the right and the bottom. <br>
-		You should not see a red rectangle on the page. <br>
-		The color of the scrollbars should be aqua. No black color for the scrollbars.
-		</p>
-		<div class="simple">
+		<p>Test passes if you see a black rectangle.</p>
+		<div class="normal">
 			<div class="mixed">
-				<div class="embedded_child"></div>
+				<div class="scrollingContent"></div>
 			</div>
 		</div>
 	</body>
