--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-intermediate-element-overflow-hidden-and-border-radius.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-intermediate-element-overflow-hidden-and-border-radius.html
@@ -1,48 +1,40 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Test: mix-blend-mode between a parent element and a blended child with overflow:hidden and border-radius</title>
+		<title>CSS Test: mix-blend-mode between an element and its child having overflow:hidden and border-radius, when the blending element overlaps a sibling element</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
-		<meta name="assert" content="Test checks that the element with mix-blend-mode, overflow:hidden and border-radius correctly blends with the parent element.">
+		<meta name="assert" content="Test checks that the element with mix-blend-mode, overflow:hidden and border-radius blends correctly with its parent, as well as with the sibling element where they overlap.">
 		<link rel="match" href="reference/mix-blend-mode-intermediate-element-overflow-hidden-and-border-radius-ref.html">
 		<style>
-			.simple {
+			.normal {
 				background: aqua;/*rgb(0,255,255);*/
-				width: 140px;
-				height: 140px;
-				display: inline-block;
-				position: fixed;
+				width: 150px;
+				height: 150px;
+				position: relative;
+				z-index: 1;
 			}
 			.mixed {
-				background: red;/*rgb(255,0,0);*/
-				margin-top: -200px;
-				margin-left: 20px;
-				width: 200px;
-				height: 200px;
-				mix-blend-mode: difference;
-				-webkit-transform: translateZ(0);
-				-moz-transform: translateZ(0);
+				background: fuchsia;/*rgb(255,0,255);*/
+				width: 150px;
+				height: 75px;
+				margin-top: -75px;
+				mix-blend-mode: multiply;
 			}
-			.intermediateOfMixed {
+			.siblingOfMixed {
 				background: yellow;/*rgb(255,255,0);*/
-				margin-top: 20px;
-				margin-left: 20px;
-				width: 200px;
-				height: 200px;
+				width: 150px;
+				height: 150px;
 				overflow: hidden;
-				border-radius: 50%;
+				border-radius: 2em 2em;
 			}
 		</style>
 	</head>
 	<body>
-		<p> You should see two overlapping squares and a green circle on top of the second square <br>
-			The color of the first square should be aqua. <br>
-			The second square should have three red corners and one white corner. <br>
-		</p>
-		<div class="simple">
-			<div class="intermediateOfMixed"></div>
+		<p> This test passes if you can see a rectangle split in two pieces: the top half is yellow with aqua rounded borders and the bottom half is red with blue borders.</p>
+		<div class="normal">
+			<div class="siblingOfMixed"></div>
 			<div class="mixed">
 			</div>
 		</div>
