--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-element-overflow-hidden-and-border-radius.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-element-overflow-hidden-and-border-radius.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Test: mix-blend-mode between a parent element with overflow:hidden and border-radius</title>
+		<title>CSS Test: blending between an element having overflow:hidden and border-radius and its child</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
-		<meta name="assert" content="Test checks that the element with mix-blend-mode blends with the parent element with overflow:hidden and border-radius">
+		<meta name="assert" content="Test checks that an element having mix-blend-mode blends with the parent element having overflow:hidden and border-radius">
 		<link rel="match" href="reference/mix-blend-mode-parent-element-overflow-hidden-and-border-radius-ref.html">
 		<style>
-			.simple{
+			.normal {
 				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
 				display: inline-block;
-				position: fixed;
+				position: relative;
+				z-index: 1;
 				overflow: hidden;
 				border-radius: 1em 5em;
 			}
 			.mixed {
 				background: red;/*rgb(255,0,0);*/
-				margin-top: 20px;
-				margin-left: 20px;
 				width: 200px;
 				height: 200px;
 				mix-blend-mode: multiply;
-				}
+			}
 		</style>
 	</head>
 	<body>
-		<p> You should see a black square on top of an aqua lemon. <br>
-			The part of the square outside the lemon is not painted. <br>
-			You should not see the part of a red square on the page.</p>
-		<div class="simple">
+		<p> Test passes if you see a black square with rounded corners.</p>
+		<div class="normal">
 			<div class="mixed"></div>
 		</div>
 	</body>
