fixed email address

--- a/test-plans/css-shapes-1/index.html
+++ b/test-plans/css-shapes-1/index.html
@@ -15,7 +15,7 @@
           shortName: "css-shapes-1-test-plan",
           editors: [
             {
-              name: "Rebecca Hauck", mailto: "mibalan@adobe.com",
+              name: "Rebecca Hauck", mailto: "rhauck@adobe.com",
               company: "Adobe Systems, Inc.", companyURL: "http://www.adobe.com/"
             },
           ],
