added tests for examples 10+11 (fixes #423, #424), updated spec example #'s to match new draft

--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-009.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-009.html
@@ -10,8 +10,8 @@
     <meta name="assert" content="This test verifies that the content flows around the 
                                  shape defined in the images alpha channel that is completely
                                  transparent."/>
-    <!-- This test is derived from Example 6 in this version of the spec:
-         http://www.w3.org/TR/2013/WD-css-shapes-1-20131203/ -->
+    <!-- This test is derived from Example 7 in this version of the spec:
+           TODO -->
     <style type="text/css">
         .container {
           position: absolute;
