--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-017.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-017.html
@@ -9,8 +9,8 @@
     <meta name="flags" content="ahem"/>
     <meta name="assert" content="This test verifies that content wraps around a shape
                                  defined by its content box."/>
-    <!-- This test is derived from Examples 7 and 8 in this version of the spec:
-         http://www.w3.org/TR/2013/WD-css-shapes-1-20131203/ -->
+    <!-- This test is derived from Examples 8 and 9 in this version of the spec:
+         TODO -->
     <style type="text/css">
         .container {
             position: absolute;
