--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-012.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-012.html
@@ -11,8 +11,8 @@
     <meta name="assert" content="This test verifies content flows around a shape that is 
                                  defined in the image's alpha channel and adjusted by the 
                                  image-threshold" />
-    <!-- This test is derived from Example 6 in this version of the spec:
-         http://www.w3.org/TR/2013/WD-css-shapes-1-20131203/ -->
+    <!-- This test is derived from Example 7 in this version of the spec:
+         TODO -->
     <style type="text/css">
         .container {
           position: absolute;
