--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-019.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-019.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: Shape from image - url(), alpha channel, opacity > 0</title>
+    <title>CSS Test: Shape from image - alpha channel, opacity > 0 + shape-margin</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shapes-from-image"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property"/>
-    <link rel="match" href="reference/shape-outside-011-ref.html"/>
+    <link rel="match" href="reference/shape-outside-019-ref.html"/>
     <meta name="flags" content="ahem"/>
     <meta name="assert" content="This test verifies that the content flows around the 
                                  shape defined in the images alpha channel that has some
                                  opacity."/>
-    <!-- This test is derived from Example 7 in this version of the spec:
+    <!-- This test is derived from Example 11 in this version of the spec:
          TODO -->
     <style type="text/css">
         .container {
@@ -26,36 +26,49 @@
         }
         #image {
             float: left;
-            shape-outside: url("support/circle-shadow.png");
+            -webkit-shape-outside: url("support/circle-shadow.png");
+            -webkit-shape-margin: 20px;
+        }
+        #margin-circle {
+            position: absolute;
+            top: 70px;
+            left: 10px;
+            width: 300px;
+            height: 300px;
+            background-color: black;
+            -webkit-clip-path: ellipse(115px, 100px, 140px, 130px);
+            z-index: -1;
         }
         #failure {
             width: 300px;
             color: red;
-            z-index: -1;
+            z-index: -2;
         }
-        #line-1, #line-5 { margin-left: 218px; }
-        #line-2, #line-4 { margin-left: 236px; }
-        #line-3 { margin-left: 238px; }
-        #line-6 { margin-top: 7px; }
+        #line-1, #line-5 { margin-left: 242px; }
+        #line-2, #line-4 { margin-left: 256px; }
+        #line-3 { margin-left: 258px; }
+        #line-6 { margin-left: 204px; }
     </style>
 </head>
 <body>
     <p>
-        The test passes if the short green horizontal bars are the right of the circle,
-        the long green bar is beneath the circle, and no bars intersect the circle's shadow.
+        The test passes if the short green horizontal bars are the right of the black edge
+        of circle, the long green bar is beneath it, and no bars intersect the black.
         There should be no red.
     </p>    
     <div id="test" class="container">
         <img id="image" src="support/circle-shadow.png"/>
-        XXXXXX XXXXXX XXXXXX XXXXXX XXXXXX XXXXXXXXXXXXXXX
+        XXXXXX XXXXXX XXXXXX XXXXXX XXXXXX XXXXXX XXXXXXXXXXXXXXX
     </div>
+    <div id="margin-circle"></div>
     <div id="failure" class="container">
         <span id="line-1">XXXXXX</span>
         <span id="line-2">XXXXXX</span>
         <span id="line-3">XXXXXX</span>
         <span id="line-4">XXXXXX</span>
         <span id="line-5">XXXXXX</span>
-        <div id="line-6">XXXXXXXXXXXXXXX</div>
+        <span id="line-6">XXXXXX</span>
+        <div id="line-7">XXXXXXXXXXXXXXX</div>
     </div>
 </body>
 </html>
