--- a/html/semantics/forms/constraints/form-validation-validate.html
+++ b/html/semantics/forms/constraints/form-validation-validate.html
@@ -29,12 +29,12 @@
 <form id="fm3"  style="display:none">
   <fieldset id="fs">
     <legend><input type="text" id="inp1"></legend>
-    <input type="text" required value="">
+    <input type="text" required value="" id="inp2">
   </fieldset>
 </form>
 
 <script>
-  var cancelable1 = true,
+  var cancelable = true,
       times1 = 0,
       times2 = 0,
       invalidList1 = [],
@@ -42,11 +42,13 @@
       test1,
       test2,
       fm1,
-      fm2;
+      fm2,
+      fm3;
 
   setup(function () {
     fm1 = document.getElementById("fm1");
     fm2 = document.getElementById("fm2");
+    fm3 = document.getElementById("fm3");
     test1 = document.getElementById("test1");
     test2 = document.getElementById("test2");
     for (var index = 0; index < fm1.elements.length; index++) {
@@ -55,7 +57,7 @@
         times1++;
         invalidList1.push(e.target);
         if (!e.cancelable)
-          cancelable1 = e.cancelable;
+          cancelable = e.cancelable;
       }, false);
     }
 
@@ -85,27 +87,29 @@
   }, "If all of the submittable elements whose form owner is the form are valid, the form.reportValidity must be true");
 
   test(function(){
+    assert_false(fm3.checkValidity(), "The checkValidity method should be false");
     document.getElementById("fs").disabled = true;
-    assert_true(document.getElementById("fm3").checkValidity(), "The checkValidity method should be true");
+    assert_true(fm3.checkValidity(), "The checkValidity method should be true");
 
     document.getElementById("inp1").value = "aaa";
     document.getElementById("inp1").type = "url";
-    assert_false(document.getElementById("fm3").checkValidity(), "The checkValidity method should be false");
+    assert_false(fm3.checkValidity(), "The checkValidity method should be false");
   }, "Check the checkValidity method of the form element when it has a fieldset child");
 
   test(function(){
+    assert_false(fm3.reportValidity(), "The reportValidity method should be false");
     document.getElementById("fs").disabled = true;
-    assert_true(document.getElementById("fm3").reportValidity(), "The reportValidity method should be true");
+    assert_true(fm3.reportValidity(), "The reportValidity method should be true");
 
     document.getElementById("inp1").value = "aaa";
     document.getElementById("inp1").type = "url";
-    assert_false(document.getElementById("fm3").reportValidity(), "The reportValidity method should be false");
+    assert_false(fm3.reportValidity(), "The reportValidity method should be false");
   }, "Check the reportValidity method of the form element when it has a fieldset child");
 
   test(function () {
     assert_equals(times1, 4, "The invalid event will be fired if the checkValidity or reportValidity method are called");
     assert_array_equals(invalidList1, [test1, test2, test1, test2], "The invalid event must be fired at the invalid control");
-    assert_true(cancelable1, "The invalid event is cancelable");
+    assert_true(cancelable, "The invalid event is cancelable");
   }, "The invalid event must be fired at the invalid controls");
 
   test(function () {
