--- a/html/semantics/forms/constraints/form-validation-willValidate.html
+++ b/html/semantics/forms/constraints/form-validation-willValidate.html
@@ -22,8 +22,18 @@
       types: ["button", "reset"],
       testData: [{conditions: {}, expected: false, name: "[target] Must be barred from the constraint validation"}]
     },
-    //OBJECT, KEYGEN, ?FIELDSET, ?OUTPUT elements must be barred from the constraint validation
-    //? - unconforming
+    //FIELDSET, OUTPUT elements should not be barred from the constraint validation
+    {
+      tag: "fieldset",
+      types: [],
+      testData: [{conditions: {}, expected: true, name: "[target] Must not be barred from the constraint validation"}]
+    },
+    {
+      tag: "output",
+      types: [],
+      testData: [{conditions: {}, expected: true, name: "[target] Must not be barred from the constraint validation"}]
+    },
+    //OBJECT, KEYGEN, elements must be barred from the constraint validation
     {
       tag: "object",
       types: [],
@@ -34,27 +44,17 @@
       types: [],
       testData: [{conditions: {}, expected: false, name: "[target] Must be barred from the constraint validation"}]
     },
-    {
-      tag: "fieldset",
-      types: [],
-      testData: [{conditions: {}, expected: false, name: "[target] Must be barred from the constraint validation"}]
-    },
-    {
-      tag: "output",
-      types: [],
-      testData: [{conditions: {}, expected: false, name: "[target] Must be barred from the constraint validation"}]
-    },
     //If an element is disabled, it is barred from constraint validation.
-    //The willValidate attribute must be true if an elment is mutable
-    //If the readonly attribute is specified on an INPUT element, the element is barred from constraint validation.    
+    //The willValidate attribute must be true if an element is mutable
+    //If the readonly attribute is specified on an INPUT element, the element is barred from constraint validation.
     {
       tag: "input",
-      types: ["text", "search", "tel", "url", "email", "password", "datetime", "date", "month", "week", "time", "datetime-local", "color", "file", "submit"],
+      types: ["text", "search", "tel", "url", "email", "password", "date", "month", "week", "time", "color", "file", "submit"],
       testData: [
         {conditions: {disabled: true}, expected: false, name: "[target] Must be barred from the constraint validation if it is disabled"},
-        {conditions: {disabled: false, readonly: false}, expected: true, name: "[target] The willValidate attribute must be true if an elment is mutable"},        
-        {conditions: {readOnly: true}, expected: false, name: "[target] Must be barred from the constraint validation if it is read only"},
-        {conditions: {disabled: false, readonly: false}, expected: false, name: "[target] The willValidate attribute must be false if it has a datalist ancestor", ancestor: "datalist"},
+        {conditions: {disabled: false, readOnly: false}, expected: true, name: "[target] The willValidate attribute must be true if an elment is mutable"},
+        {conditions: {readOnly: true}, expected: false, name: "[target] Must be barred from the constraint validation if it is readonly"},
+        {conditions: {disabled: false, readOnly: false}, expected: false, name: "[target] The willValidate attribute must be false if it has a datalist ancestor", ancestor: "datalist"},
       ]
     },
     {
