--- a/html/semantics/forms/constraints/form-validation-validity-badInput.html
+++ b/html/semantics/forms/constraints/form-validation-validity-badInput.html
@@ -17,8 +17,8 @@ var testElements = [
         {conditions: {multiple: false, value: ""}, expected: false, name: "[target] The multiple attribute is false and the value attribute is empty"},
         {conditions: {multiple: false, value: "test1@example.com"}, expected: false, name: "[target] The multiple attribute is false and the value attribute is a valid e-mail address"},
         {conditions: {multiple: false, value: "国际@example.com"}, expected: true, name: "[target] The multiple attribute is false and the value cannot be converted to punycode"},
-        {conditions: {multiple: true, value: "test1@eample.com,test2@eample.com"}, expected: false, name: "[target] The multiple attribute is true and the value contains valid e-mail addresses"},
-        {conditions: {multiple: true, value: "test,1@eample.com"}, expected: true, name: "[target] The multiple attribute is true and the value attribute contains a ','"},
+        {conditions: {multiple: true, value: "test1@example.com,test2@eample.com"}, expected: false, name: "[target] The multiple attribute is true and the value contains valid e-mail addresses"},
+        {conditions: {multiple: true, value: "test,1@example.com"}, expected: true, name: "[target] The multiple attribute is true and the value attribute contains a ','"},
         {conditions: {multiple: true, value: "国际@example.com"}, expected: true, name: "[target] The multiple attribute is true and the value cannot be converted to punycode"}
       ]
     },
