move video test to loading-the-media-resource

--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/networkState_media-element-load001.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/networkState_media-element-load001.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html><head>
-	<title>video.networkState - default state</title>
+	<title>check if 'emptied' event fired after load()</title>
 	<script src="/resources/testharness.js"></script>
 	<script src="/resources/testharnessreport.js"></script>
-	<script src="../../../../common/media.js"></script>
+	<script src="../../../../../common/media.js"></script>
 </head>
 <body>
   <p><a href="http://www.w3.org/TR/html5/embedded-content-0.html#media-element-load-algorithm">Spec Reference</a></p>
