Addressing Mihai's review

--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-sibling-with-3D-transform-and-transition.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-sibling-with-3D-transform-and-transition.html
@@ -3,16 +3,18 @@
 	<head>
 		<title>CSS Test: blending between an element and its sibling having 3D transform and transition</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="author" title="Ion Roșca" href="mailto:rosca@adobe.com">
+		<link rel="reviewer" title="Mihai Țică" href="mailto:mitica@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
 		<meta name="assert" content="Test checks that an element having mix-blend-mode blends with an overlapping sibling element having 3D transform and transition">
 		<link rel="match" href="">
-		<style>
-			.normal {
+		<style type="text/css">
+			.parent {
 				position: relative;
 				z-index: 1;
 			}
-			.mixed {
+			.blended {
 				background: fuchsia;/*rgb(255,0,255);*/
 				margin-top: -200px;
 				margin-left: 20px;
@@ -20,19 +22,15 @@
 				height: 100px;
 				mix-blend-mode: difference;
 			}
-			.siblingOfMixed {
+			.siblingOfBlended {
 				background: red;/*rgb(255,0,0);*/
 				margin-top: 20px;
 				margin-left: 20px;
 				width: 200px;
 				height: 200px;
-				-webkit-transition: -webkit-transform 2s;
-				-moz-transition: -moz-transform 2s;
 				transition: transform 2s;
 			}
-			.siblingOfMixed:hover {
-			    -webkit-transform: rotateX(40deg);
-			    -moz-transform: rotateX(40deg);
+			.siblingOfBlended:hover {
 			    transform: rotateX(40deg);
 			}
 		</style>
@@ -40,9 +38,9 @@
 	<body>
 		<p>You should see 2 squares: a blue small square in a red container.<br>
 		When you move the mouse over the red square, it will get rotated and you should see the real color of the uncovered part of the blue rectangle - fuchsia, while the rotated scene should not change the colors.</p>
-		<div class="normal">
-			<div class="siblingOfMixed"></div>
-			<div class="mixed"></div>
+		<div class="parent">
+			<div class="siblingOfBlended"></div>
+			<div class="blended"></div>
 		</div>
 	</body>
 </html>
