--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-with-transform-and-perspective.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-with-transform-and-perspective.html
@@ -3,11 +3,13 @@
 	<head>
 		<title>CSS Test: blending between an element and its child having mix-blend-mode and perspective</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="author" title="Ion Roșca" href="mailto:rosca@adobe.com">
+		<link rel="reviewer" title="Mihai Țică" href="mailto:mitica@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
 		<meta name="assert" content="Test checks that an element having mix-blend-mode and perspective blends correctly with its parent">
 		<link rel="match" href="reference/mix-blend-mode-blended-with-transform-and-perspective-ref.html">
-		<style>
+		<style type="text/css">
 			div {
 				height: 150px;
 				width: 150px;
@@ -18,8 +20,6 @@
 				background-color: lime;/*rgb(0,255,0);*/
 			}
 			.transformed {
-				-webkit-transform: perspective(600px) translateZ(-200px);
-				-moz-transform: perspective(600px) translateZ(-200px);
 				transform: perspective(600px) translateZ(-200px);
 				background-color: red;/*rgb(255,0,0);*/
 				mix-blend-mode: difference;
