--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-both-parent-and-blended-with-3D-transform.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-both-parent-and-blended-with-3D-transform.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Test: mix-blend-mode between a parent element and its child (both with 3D transform) </title>
+		<title>CSS Test: mix-blend-mode between an element and its child (both with 3D transform) </title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="author" title="Ion Roșca" href="mailto:rosca@adobe.com">
+		<link rel="reviewer" title="Mihai Țică" href="mailto:mitica@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
 		<meta name="assert" content="Test checks that the element with mix-blend-mode blends with the parent element (both with 3D transform)">
 		<link rel="match" href="reference/mix-blend-mode-both-parent-and-blended-with-3D-transform-ref.html">
-		<style>
-			.normal {
+		<style type="text/css">
+			.parent {
 				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
 				display:inline-block;
-				-webkit-transform:rotateX(20deg);
-				-moz-transform:rotateX(20deg);
 				transform:rotateX(20deg);
 			}
-			.mixed {
+			.blended {
 				background: fuchsia;/*rgb(255,0,255);*/
 				margin-top: 20px;
 				margin-left: 20px;
 				width: 200px;
 				height: 200px;
 				transform:rotateX(20deg);
-				-webkit-transform:rotateX(20deg);
-				-moz-transform:rotateX(20deg);
 				mix-blend-mode: difference;
 			}
 		</style>
@@ -33,8 +31,8 @@
 	<body>
 		<p>You should see a fuchsia square overlapping an aqua square. <br>
 			The overlapping area should be yellow. </p>
-		<div class="normal">
-			<div class="mixed">
+		<div class="parent">
+			<div class="blended">
 			</div>
 		</div>
 	</body>
