--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-intermediate-element-overflow-hidden-and-border-radius.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-intermediate-element-overflow-hidden-and-border-radius.html
@@ -3,26 +3,28 @@
 	<head>
 		<title>CSS Test: mix-blend-mode between an element and its child having overflow:hidden and border-radius, when the blending element overlaps a sibling element</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="author" title="Ion Roșca" href="mailto:rosca@adobe.com">
+		<link rel="reviewer" title="Mihai Țică" href="mailto:mitica@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
 		<meta name="assert" content="Test checks that the element with mix-blend-mode, overflow:hidden and border-radius blends correctly with its parent, as well as with the sibling element where they overlap.">
 		<link rel="match" href="reference/mix-blend-mode-intermediate-element-overflow-hidden-and-border-radius-ref.html">
-		<style>
-			.normal {
+		<style type="text/css">
+			.parent {
 				background: aqua;/*rgb(0,255,255);*/
 				width: 150px;
 				height: 150px;
 				position: relative;
 				z-index: 1;
 			}
-			.mixed {
+			.blended {
 				background: fuchsia;/*rgb(255,0,255);*/
 				width: 150px;
 				height: 75px;
 				margin-top: -75px;
 				mix-blend-mode: multiply;
 			}
-			.siblingOfMixed {
+			.siblingOfBlended {
 				background: yellow;/*rgb(255,255,0);*/
 				width: 150px;
 				height: 150px;
@@ -33,9 +35,9 @@
 	</head>
 	<body>
 		<p> This test passes if you can see a rectangle split in two pieces: the top half is yellow with aqua rounded borders and the bottom half is red with blue borders.</p>
-		<div class="normal">
-			<div class="siblingOfMixed"></div>
-			<div class="mixed">
+		<div class="parent">
+			<div class="siblingOfBlended"></div>
+			<div class="blended">
 			</div>
 		</div>
 	</body>
