--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-element-overflow-scroll.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-element-overflow-scroll.html
@@ -3,12 +3,14 @@
 	<head>
 		<title>CSS Test: blending between an element with overflow:scroll and its child</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="author" title="Ion Roșca" href="mailto:rosca@adobe.com">
+		<link rel="reviewer" title="Mihai Țică" href="mailto:mitica@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
 		<meta name="assert" content="Test checks that an element with mix-blend-mode blends its parent having overflow:scroll">
 		<link rel="match" href="reference/mix-blend-mode-parent-element-overflow-scroll-ref.html">
-		<style>
-			.normal {
+		<style type="text/css">
+			.parent {
 				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
@@ -16,7 +18,7 @@
 				z-index: 1;
 				overflow:scroll;
 			}
-			.mixed {
+			.blended {
 				background: red;/*rgb(255,0,0);*/
 				width: 200px;
 				height: 200px;
@@ -26,8 +28,8 @@
 	</head>
 	<body>
 		<p>Test passes if you see a scrollable black rectangle.</p>
-		<div class="normal">
-			<div class="mixed"></div>
+		<div class="parent">
+			<div class="blended"></div>
 		</div>
 	</body>
 </html>
