--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform-and-transition.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform-and-transition.html
@@ -3,27 +3,26 @@
 	<head>
 		<title>CSS Test: blending between an element having 3D transitions and its child</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="author" title="Ion Roșca" href="mailto:rosca@adobe.com">
+		<link rel="reviewer" title="Mihai Țică" href="mailto:mitica@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
 		<meta name="assert" content="Test checks that an element having mix-blend-mode blends with its parent element having 3D transform and transition">
-		<style>
-			.normal {
+		<style type="text/css">
+			.parent {
 				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
 				display:inline-block;
 				position:relative;
 				z-index: 1;
-				-webkit-transition: -webkit-transform 2s;
-				-moz-transform: -moz-transform 2s;
 				transform: transform 2s;
 
 			}
-			.normal:hover {
-				-webkit-transform: rotateX(40deg);
-				-moz-transform: rotateX(40deg);
+			.parent:hover {
+				transform: rotateX(40deg);
 			}
-			.mixed {
+			.blended {
 				background: fuchsia;/*rgb(255,0,255);*/
 				margin-top: 20px;
 				margin-left: 20px;
@@ -38,8 +37,8 @@
 			The intersection of these 2 squares should be yellow. <br>
 			When you hover over the squares, they will rotate, without colors being changed.
 		</p>
-		<div class="normal">
-			<div class="mixed"></div>
+		<div class="parent">
+			<div class="blended"></div>
 		</div>
 	</body>
 </html>
