--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Test: mix-blend-mode between a parent element with 3D transform and its child</title>
+		<title>CSS Test: mix-blend-mode between an element with 3D transform and its child</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="author" title="Ion Roșca" href="mailto:rosca@adobe.com">
+		<link rel="reviewer" title="Mihai Țică" href="mailto:mitica@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
 		<meta name="assert" content="Test checks that an element with mix-blend-mode blends with its parent having 3D transform">
 		<link rel="match" href="reference/mix-blend-mode-parent-with-3D-transform-ref.html">
-		<style>
-			.normal {
+		<style type="text/css">
+			.parent {
 				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
 				display:inline-block;
 				transform:rotateX(20deg);
-				-webkit-transform:rotateX(20deg);
-				-moz-transform:rotateX(20deg);
 			}
-			.mixed {
+			.blended {
 				background: fuchsia;/*rgb(255,0,255);*/
 				margin-top: 20px;
 				margin-left: 20px;
@@ -30,8 +30,8 @@
 	<body>
 		<p>You should see a fuchsia square overlapping an aqua square. <br>
 			The overlapping area should be yellow. </p>
-		<div class="normal">
-			<div class="mixed"></div>
+		<div class="parent">
+			<div class="blended"></div>
 		</div>
 	</body>
 </html>
