--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-sibling-with-3D-transform.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-sibling-with-3D-transform.html
@@ -3,12 +3,14 @@
 	<head>
 		<title>CSS Test: blending between an element and its sibling element having 3D transform</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="author" title="Ion Roșca" href="mailto:rosca@adobe.com">
+		<link rel="reviewer" title="Mihai Țică" href="mailto:mitica@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
 		<meta name="assert" content="Test checks that an element with mix-blend-mode blends with both parent element and with sibling element having 3D transform">
 		<link rel="match" href="reference/mix-blend-mode-sibling-with-3D-transform-ref.html">
-		<style>
-			.normal {
+		<style type="text/css">
+			.parent {
 				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
@@ -16,7 +18,7 @@
 				position: relative;
 				z-index: 1;
 			}
-			.mixed {
+			.blended {
 				background: fuchsia;/*rgb(255,0,255);*/
 				margin-top: -200px;
 				margin-left: 20px;
@@ -24,14 +26,12 @@
 				height: 200px;
 				mix-blend-mode: difference;
 			}
-			.siblingOfMixed {
+			.siblingOfBlended {
 				background: red;/*rgb(255,0,0);*/
 				margin-top: 20px;
 				margin-left: 20px;
 				width: 200px;
 				height: 200px;
-			    -webkit-transform: perspective(600px) translateZ(-200px);
-			    -moz-transform: perspective(600px) translateZ(-200px);
 			    transform: perspective(600px) translateZ(-200px);
 			}
 		</style>
@@ -39,9 +39,9 @@
 	<body>
 		<p>You should see three overlapping squares, from back to front, having the following colors: aqua, fuchsia and blue. <br>
 		The intersection area between aqua and fuchsia squares, which is not overlapped by the blue square, should be yellow.</p>
-		<div class="normal">
-			<div class="siblingOfMixed"></div>
-			<div class="mixed"></div>
+		<div class="parent">
+			<div class="siblingOfBlended"></div>
+			<div class="blended"></div>
 		</div>
 	</body>
 </html>
