--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-with-transform-and-preserve-3D.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-with-transform-and-preserve-3D.html
@@ -3,11 +3,13 @@
 	<head>
 		<title>CSS Test: mix-blend-mode between an element and its child having 3D transform and preserve 3D</title>
 		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+		<link rel="author" title="Ion Roșca" href="mailto:rosca@adobe.com">
+		<link rel="reviewer" title="Mihai Țică" href="mailto:mitica@adobe.com">
 		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
 		<meta name="flags" content="">
 		<meta name="assert" content="Test checks that mix-blend-mode overrides the behavior of transform-style:preserve-3d">
 		<link rel="match" href="reference/mix-blend-mode-with-transform-and-preserve-3D-ref.html">
-		<style>
+		<style type="text/css">
 			div {
 				height: 150px;
 				width: 150px;
@@ -18,21 +20,13 @@
 				background-color: lime;/*rgb(0,255,0);*/
 			}
 			.transformed {
-				-webkit-transform-style: preserve-3d;
-				-moz-transform-style: preserve-3d;
 				transform-style: preserve-3d;
-				-webkit-transform: rotateY(50deg);
-				-moz-transform: rotateY(50deg);
 				transform: rotateY(50deg);
 				background-color: aqua;/*rgb(0,255,255);*/
 				mix-blend-mode: difference;
 			}
 			.child {
-				-webkit-transform-origin: top left;
-				-moz-transform-origin: top left;
 				transform-origin: top left;
-				-webkit-transform: rotateX(40deg);
-				-moz-transform: rotateX(40deg);
 				transform: rotateX(40deg);
 				background-color: red;/*rgb(255,0,0);*/
 			}
